--- a/focus-element.css
+++ b/focus-element.css
@@ -1,21 +1,42 @@
-.continuous-string-active {
-    cursor: crosshair !important;
-}
-
-.continuous-string-active * :hover{
-    outline: 1px solid #f44336;
-}
-
-.continuous-string-active-indicator{
+body.constrgen--active .constrgen__indicator{
+    font-family: sans-serif;
     text-transform: uppercase;
     background: #f44336;
     color: #fff;
     position: fixed;
     right: 14px;
     top: 14px;
-    font-size: 14px;
-    line-height: 19px;
-    padding: 5px 7px;
+    font-size: 12px;
+    line-height: 12px;
+    padding: 5px;
     z-index: 99;
-    border-radius: 4px;
+}
+
+body.constrgen--active .constrgen__overlay{
+   background: #f4433655 !important;
+   background-color: #f4433655 !important;
+   outline:#f44336 dashed 2px !important;
+   color: #000 !important;
+   opacity: 1 !important;
+}
+
+body.constrgen--active .constrgen__textNode:not(.constrgen__indicator):hover{
+    outline: #f44336 solid 1px !important;
+    cursor: text;
+}
+
+body.constrgen--active .constrgen__indicator:hover{
+    cursor: default;
+}
+
+body.constrgen--active .constrgen__limitedText{
+    background: #94cf96 !important;
+    background-color: #94cf96 !important;
+    outline:#4caf50 dashed 2px !important;
+    color: #000 !important;
+    opacity: 1 !important;
+}
+
+body.constrgen--active .constrgen__limitedText:hover{
+    outline:#4caf50 solid 1px !important;
 }
